--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -203,3 +203,19 @@ header a:visited {
 
 }
 
+.cart-prod-price {
+    font-size: 0.95em;
+}
+
+.cart-btn {
+    background-color: rgb(236, 236, 236);
+    height: 30px;
+    width: 30px;
+    border-radius: 100%;
+    border: none;
+}
+
+.cart-btn:active {
+    background-color: rgba(187, 187, 187);
+    border: grey;
+}
