--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -169,7 +169,7 @@ header a:visited {
 }
 
 
-#cartbtn {
+#cart-btn {
     position: fixed;
     top: 15px;
     right: 0px;
@@ -207,7 +207,7 @@ header a:visited {
     font-size: 0.95em;
 }
 
-.cart-btn {
+.qty-btn {
     background-color: rgb(236, 236, 236);
     height: 30px;
     width: 30px;
@@ -215,7 +215,8 @@ header a:visited {
     border: none;
 }
 
-.cart-btn:active {
+.qty-btn:active {
     background-color: rgba(187, 187, 187);
     border: grey;
 }
+
