--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,4 +1,3 @@
-
 /*----------------header-----------------*/
 
 header {
@@ -95,6 +94,10 @@ header a:visited {
     box-shadow: none;
 }
 
+.breadcrumb-item a {
+    color: rgb(102, 102, 102);
+}
+
 /*----------------cards-----------------*/
 
 .card {
@@ -153,7 +156,7 @@ header a:visited {
     .addtocart-btn {
         display: none;
     }
-    
+
     .plus-minus {
         display: none;
     }
@@ -184,6 +187,7 @@ header a:visited {
 
 .offcanvas {
     max-height: 100%;
+    border-radius: 2% 0 2% 2%;
 }
 
 
