routes and start productpage

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -182,6 +182,23 @@ header a:visited {
     }
 }
 
+/*----------------productpage-----------------*/
+
+.productpage img {
+    max-height: 650px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /*----------------shoppingcart-----------------*/
 
